<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- logo strings -->

    <string name="app_name">Page 1</string>
    <string name="ek_img_content">ExportKit Image</string>
    <string name="seacrh_destination_string">Seacrh Destination</string>
    <string name="seacrh_destination_ek1_string">Seacrh Destination</string>
    <string name="warning__you_are_near_a_bad_air_quality_area__please_avoid_the_yellow_area_on_the_map_or_use_your_mask__string">Warning!You are near a bad air quality area. Please avoid the yellow area on the map or use your mask.</string>
    <string name="warning__you_are_near_a_bad_air_quality_area__please_avoid_the_yellow_area_on_the_map_or_use_your_mask__ek1_string">Warning!You are near a bad air quality area. Please avoid the yellow area on the map or use your mask.</string>
    <string name="seacrh_destination_ek2_string">Seacrh Destination</string>
    <string name="_7___eleven_string">7 - Eleven</string>
    <string name="warning__you_are_near_a_bad_air_quality_area__please_avoid_the_yellow_area_on_the_map_or_use_your_mask__ek2_string">Warning!You are near a bad air quality area. Please avoid the yellow area on the map or use your mask.</string>
    <string name="warning__you_are_near_a_bad_air_quality_area__please_avoid_the_yellow_area_on_the_map_or_use_your_mask__ek3_string">Warning!You are near a bad air quality area. Please avoid the yellow area on the map or use your mask.</string>
    <string name="search_destination_string">7-Eleven</string>
    <string name="_4_found___edit_search_string">4 found - Edit Search</string>
    <string name="_7_eleven_e_campbell_rd_string">7-ElevenE Campbell Rd</string>
    <string name="_7_eleven_n_plano_rd_string">7-ElevenN Plano Rd</string>
    <string name="__5_mi_string">.5 mi</string>
    <string name="_1_7_mi_string">1.7 mi</string>
    <string name="from__string">From:</string>
    <string name="to__string">To:</string>
    <string name="my_location_string">My Location</string>
    <string name="_7_eleven_string">7-Eleven</string>
    <string name="avoid_string">Avoid</string>
    <string name="_30_min_string">30 min</string>
    <string name="_32_min_string">32 min</string>
    <string name="go_string">GO</string>
    <string name="go_ek1_string">GO</string>
    <string name="go_ek2_string">GO</string>
    <string name="_34_min_string">34 min</string>
    <string name="_1_7_mi___safest_route_string">1.7 mi - Safest route</string>
    <string name="_1_5_mi___has_pollution_string">1.5 mi - Has pollution</string>
    <string name="_1_4_mi___fastest_route__most_pollution_string">1.4 mi - Fastest route, most pollution</string>
    <string name="warning__change_route_to_park_ave_s__avoid_the_read_and_yellow_area_on_madison_ave__string">Warning!Change route to Park Ave S, avoid the read and yellow area on Madison Ave.</string>
    <string name="seacrh_destination_ek3_string">Seacrh Destination</string>
    <string name="_7___eleven_ek1_string">7 - Eleven</string>
    <string name="warning__you_are_near_a_bad_air_quality_area__please_avoid_the_yellow_area_on_the_map_or_use_your_mask__ek4_string">Warning!You are near a bad air quality area. Please avoid the yellow area on the map or use your mask.</string>
    <string name="warning__you_are_near_a_bad_air_quality_area__please_avoid_the_yellow_area_on_the_map_or_use_your_mask__ek5_string">Warning!You are near a bad air quality area. Please avoid the yellow area on the map or use your mask.</string>
    <string name="search_destination_ek1_string">7-Eleven</string>
    <string name="_4_found___edit_search_ek1_string">4 found - Edit Search</string>
    <string name="_7_eleven_e_campbell_rd_ek1_string">7-ElevenE Campbell Rd</string>
    <string name="_7_eleven_n_plano_rd_ek1_string">7-ElevenN Plano Rd</string>
    <string name="__5_mi_ek1_string">.5 mi</string>
    <string name="_1_7_mi_ek1_string">1.7 mi</string>
    <string name="from__ek1_string">From:</string>
    <string name="to__ek1_string">To:</string>
    <string name="my_location_ek1_string">My Location</string>
    <string name="_7_eleven_ek1_string">7-Eleven</string>
    <string name="avoid_ek1_string">Avoid</string>
    <string name="_30_min_ek1_string">30 min</string>
    <string name="_32_min_ek1_string">32 min</string>
    <string name="go_ek3_string">GO</string>
    <string name="go_ek4_string">GO</string>
    <string name="go_ek5_string">GO</string>
    <string name="_34_min_ek1_string">34 min</string>
    <string name="_1_7_mi___safest_route_ek1_string">1.7 mi - Safest route</string>
    <string name="_1_5_mi___has_pollution_ek1_string">1.5 mi - Has pollution</string>
    <string name="_1_4_mi___fastest_route__most_pollution_ek1_string">1.4 mi - Fastest route, most pollution</string>
    <string name="warning__change_route_to_s_central_expy__avoid_the_read_and_yellow_area_on_n_greenville_ave__string">Warning!Change route to S Central Expy, avoid the read and yellow area on N Greenville Ave.</string>
    <string name="seacrh_destination_ek4_string">Seacrh Destination</string>
    <string name="_7___eleven_ek2_string">7 - Eleven</string>
    <string name="warning__you_are_near_a_bad_air_quality_area__please_avoid_the_yellow_area_on_the_map_or_use_your_mask__ek6_string">Warning!You are near a bad air quality area. Please avoid the yellow area on the map or use your mask.</string>
    <string name="warning__you_are_near_a_bad_air_quality_area__please_avoid_the_yellow_area_on_the_map_or_use_your_mask__ek7_string">Warning!You are near a bad air quality area. Please avoid the yellow area on the map or use your mask.</string>
    <string name="search_destination_ek2_string">7-Eleven</string>
    <string name="_4_found___edit_search_ek2_string">4 found - Edit Search</string>
    <string name="_7_eleven_e_campbell_rd_ek2_string">7-ElevenE Campbell Rd</string>
    <string name="_7_eleven_n_plano_rd_ek2_string">7-ElevenN Plano Rd</string>
    <string name="__5_mi_ek2_string">.5 mi</string>
    <string name="_1_7_mi_ek2_string">1.7 mi</string>
    <string name="from__ek2_string">From:</string>
    <string name="to__ek2_string">To:</string>
    <string name="my_location_ek2_string">My Location</string>
    <string name="_7_eleven_ek2_string">7-Eleven</string>
    <string name="avoid_ek2_string">Avoid</string>
    <string name="_30_min_ek2_string">30 min</string>
    <string name="_32_min_ek2_string">32 min</string>
    <string name="go_ek6_string">GO</string>
    <string name="go_ek7_string">GO</string>
    <string name="go_ek8_string">GO</string>
    <string name="_34_min_ek2_string">34 min</string>
    <string name="_1_7_mi___safest_route_ek2_string">1.7 mi - Safest route</string>
    <string name="_1_5_mi___has_pollution_ek2_string">1.5 mi - Has pollution</string>
    <string name="_1_4_mi___fastest_route__most_pollution_ek2_string">1.4 mi - Fastest route, most pollution</string>
    <string name="warning__change_route_to_park_ave_s__avoid_the_yellow_area_on_madison_ave_and_close_the_windows__string">Warning!Change route to Park Ave S, avoid the yellow area on Madison Ave and Close the windows.</string>
    <string name="profile_dashboard_string">Profile Dashboard</string>
    <string name="john_smith_string">John Smith</string>
    <string name="johnsmith_gmail_com_string">johnsmith@gmail.com</string>
    <string name="edit_health_details_string">Edit Health Details</string>
    <string name="pm_visualization_string">PM Visualization</string>
    <string name="manage_profile_string">Manage Profile</string>
    <string name="notification_settings_string">Notification</string>
    <string name="navigation_string">Navigation</string>
    <string name="help___support_string">Help &amp; Support</string>
    <string name="profile_dashboard_ek1_string">Profile Dashboard</string>
    <string name="john_smith_ek1_string">John Smith</string>
    <string name="johnsmith_gmail_com_ek1_string">johnsmith@gmail.com</string>
    <string name="edit_health_details_ek1_string">Edit Health Details</string>
    <string name="pm_visualization_ek1_string">PM Visualization</string>
    <string name="manage_profile_ek1_string">Manage Profile</string>
    <string name="notification_settings_ek1_string">Notification Settings</string>
    <string name="navigation_ek1_string">Navigation</string>
    <string name="help___support_ek1_string">Help &amp; Support</string>
    <string name="edit_health_details_ek2_string">Edit Health Details</string>
    <string name="profile_dashboard_ek2_string">Profile Dashboard</string>
    <string name="please_enter_your_passcode_to_access_health_details_string">Please enter your passcodeto access health details</string>
    <string name="profile_dashboard_ek3_string">Profile Dashboard</string>
    <string name="edit_health_details_ek3_string">Edit Health Details</string>
    <string name="_9_string">9</string>
    <string name="_6_string">6</string>
    <string name="_0_string">0</string>
    <string name="_8_string">8</string>
    <string name="_5_string">5</string>
    <string name="_7_string">7</string>
    <string name="_4_string">4</string>
    <string name="_3_string">3</string>
    <string name="_2_string">2</string>
    <string name="_1_string">1</string>
    <string name="please_enter_your_passcode_to_access_health_details_ek1_string">Please enter your passcodeto access health details</string>
    <string name="_2_ek1_string">2</string>
    <string name="_3_ek1_string">3</string>
    <string name="_4_ek1_string">4</string>
    <string name="_1_ek1_string">1</string>
    <string name="_9_ek1_string">9</string>
    <string name="_6_ek1_string">6</string>
    <string name="_0_ek1_string">0</string>
    <string name="_8_ek1_string">8</string>
    <string name="_5_ek1_string">5</string>
    <string name="_7_ek1_string">7</string>
    <string name="profile_dashboard_ek4_string">Profile Dashboard</string>
    <string name="sex_string">Sex</string>
    <string name="edit_health_details_ek4_string">Edit Health Details</string>
    <string name="height_string">Height</string>
    <string name="weight_string">Weight</string>
    <string name="date_of_birth_string">Date of Birth</string>
    <string name="conditions_and_diseases_string">Conditions and Diseases</string>
    <string name="male_string">Male</string>
    <string name="_2_24_ins_string">2.24 Ins</string>
    <string name="_245_lbs_string">245 lbs</string>
    <string name="may_1__1996_string">May 1, 1996</string>
    <string name="profile_dashboard_ek5_string">Profile Dashboard</string>
    <string name="dust_allergy_string">Dust Allergy</string>
    <string name="conditions_and_diseases_ek1_string">Conditions and Diseases</string>
    <string name="pollen_allergy_string">Pollen Allergy</string>
    <string name="asthma_string">Asthma</string>
    <string name="immunocompromised_string">Immunocompromised</string>
    <string name="heart_condition_string">Heart Condition</string>
    <string name="lung_cancer_string">Lung cancer</string>
</resources>